<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/highland">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="30dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:paddingTop="30dp"
            android:layout_gravity="center"
            android:src="@drawable/devgames_logo_full_login"
            android:contentDescription="@string/app_name"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_rounded_corners_white">

            <LinearLayout
                android:id="@+id/login_credentials_container"
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingTop="30dp"
                android:paddingBottom="20dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:focusableInTouchMode="true">

                <EditText
                    android:id="@+id/edit_username"
                    android:singleLine="true"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/highland"
                    android:textColorHint="@color/highland_light"
                    android:backgroundTint="@color/highland"
                    android:imeOptions="actionNext"
                    android:hint="@string/username" />

                <EditText
                    android:id="@+id/edit_password"
                    android:inputType="textPassword"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:textColor="@color/highland"
                    android:textColorHint="@color/highland_light"
                    android:backgroundTint="@color/highland"
                    android:imeActionLabel="@string/login"
                    android:imeActionId="1234"
                    android:hint="@string/password" />

                <CheckBox
                    android:id="@+id/remember_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/remember"
                    android:buttonTint="@color/highland"
                    android:textColor="@color/highland"
                    android:layout_marginBottom="15dp" />

                <Button
                    android:id="@+id/button_login"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:background="@color/highland"
                    android:minHeight="40dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/login_waiting_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:background="@color/highland_light"
                android:padding="16dp"
                android:orientation="horizontal">

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/logging_in"
                    android:layout_gravity="center_vertical"
                    android:paddingStart="16dp"
                    android:paddingEnd="0dp"
                    />

            </LinearLayout>

            <TextView
                android:id="@+id/login_ok_check_mark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:drawableStart="@drawable/ic_accept"
                android:text="@string/login_200"
                android:textColor="@color/white"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:drawablePadding="16dp"/>

        </FrameLayout>

        <!--    <TextView
              android:id="@id/current_endpoint"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_margin="8dp"
              android:gravity="center_horizontal"
              android:textColor="@color/highland_light"
              />-->

        <TextView
            android:id="@+id/version_information"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center_horizontal"
            android:textColor="@color/highland_light"
            />

        <TextView
            android:id="@+id/url_information"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-4dp"
            android:gravity="center_horizontal"
            android:textColor="@color/highland_light"
            />


    </LinearLayout>

</ScrollView>