<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/almond_light"
    android:fillViewport="false">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:weightSum="1">

            <ImageView
                android:layout_width="102dp"
                android:layout_height="102dp"
                android:contentDescription="@string/avatar"
                android:id="@+id/avatar_view"
                android:src="@drawable/no_project_avatar" />

            <RelativeLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:paddingEnd="15dp">


                <TextView
                    android:id="@+id/txt_name"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/loading"
                    android:textColor="@color/mineral"
                    android:textStyle="bold"
                    android:textSize="18sp"/>

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:id="@+id/score_icon"
                    android:src="@drawable/ic_trophy"
                    android:layout_below="@+id/txt_name"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="8dp" />

                <TextView
                    android:id="@+id/txt_score"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:text="@string/loading"
                    android:textColor="@color/mineral"
                    android:textStyle="italic"
                    android:textSize="15sp"
                    android:layout_marginStart="16dp"
                    android:enabled="false"
                    android:layout_below="@+id/txt_name"
                    android:layout_toEndOf="@+id/score_icon"
                    android:gravity="center_vertical|end"
                    android:layout_marginTop="8dp" />

                <TextView
                    android:id="@+id/scores"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:text="@string/score"
                    android:textColor="@color/mineral"
                    android:textStyle="italic"
                    android:textSize="15sp"
                    android:enabled="false"
                    android:gravity="center_vertical|end"
                    android:layout_alignBaseline="@+id/txt_score"
                    android:layout_alignBottom="@+id/txt_score"
                    android:layout_toEndOf="@+id/txt_score"
                    android:layout_marginStart="8dp" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:id="@+id/project_icon"
                    android:src="@drawable/no_profile_avatar"
                    android:layout_below="@+id/score_icon"
                    android:layout_alignParentStart="false"
                    android:contentDescription="@string/project" />

                <TextView
                    android:id="@+id/txt_developers"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:text="@string/loading"
                    android:textColor="@color/mineral"
                    android:textStyle="italic"
                    android:textSize="15sp"
                    android:layout_marginStart="16dp"
                    android:gravity="center_vertical|end"
                    android:layout_below="@+id/txt_score"
                    android:layout_toEndOf="@+id/project_icon" />

                <TextView
                    android:id="@+id/developers"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:text="@string/developers"
                    android:textColor="@color/mineral"
                    android:textStyle="italic"
                    android:textSize="15sp"
                    android:gravity="center_vertical|end"
                    android:layout_below="@+id/scores"
                    android:layout_alignStart="@+id/scores" />

            </RelativeLayout>

        </LinearLayout>

        <View
            android:alpha="0.5"
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/almond_dark"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:orientation="vertical">


        </LinearLayout>

    </LinearLayout>

</ScrollView>