<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="@dimen/keyline_1">


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/keyline_2"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <TextView
                android:id="@+id/txt_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loading"
                android:textColor="@color/mineral"
                android:textSize="16sp"
                />

            <TextView
                android:id="@+id/txt_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loading"
                android:textColor="@color/mineral"
                android:textSize="16sp"
                android:layout_marginEnd="@dimen/keyline_1"
                android:layout_row="0"
                android:layout_column="17" />

        </GridLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:columnCount="3"
            android:rowCount="1"
            android:layout_gravity="fill_horizontal"
            android:stretchColumns="0,1"
            android:layout_marginEnd="@dimen/keyline_1"
            >

            <TableRow>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="12dp"
                        android:layout_height="12dp"
                        android:layout_gravity="center_vertical"
                        android:contentDescription="@string/pushes"
                        android:src="@drawable/ic_git_commit" />

                    <TextView
                        android:id="@+id/txt_commits"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:paddingStart="3dp"
                        android:paddingEnd="3dp"
                        android:text="@string/loading"
                        android:textColor="@color/mineral"
                        android:textSize="12sp"
                        android:textStyle="italic"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="12dp"
                        android:layout_height="12dp"
                        android:layout_gravity="center_vertical"
                        android:contentDescription="@string/issues"
                        android:src="@drawable/ic_bug" />

                    <TextView
                        android:id="@+id/txt_issues"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:paddingStart="3dp"
                        android:paddingEnd="3dp"
                        android:text="@string/loading"
                        android:textColor="@color/mineral"
                        android:textSize="12sp"
                        android:textStyle="italic"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="12dp"
                        android:layout_height="12dp"
                        android:layout_gravity="center_vertical"
                        android:contentDescription="@string/duplications"
                        android:src="@drawable/ic_duplicate" />

                    <TextView
                        android:id="@+id/txt_duplications"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="3dp"
                        android:paddingEnd="3dp"
                        android:text="@string/loading"
                        android:textColor="@color/mineral"
                        android:textSize="12sp"
                        android:textStyle="italic"
                        />

                </LinearLayout>

            </TableRow>

        </TableLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_thickness"
        android:layout_marginStart="@dimen/keyline_2"
        android:background="@color/whiskey_dark"
        android:layout_gravity="bottom"
        android:visibility="gone"
        />

</FrameLayout>